--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^5.16.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
